[package]
name = "rust-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.31", features = ["rt-multi-thread", "macros"] }
ethers = { version = "1.0.0", features = ["rustls", "abigen"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
